# secrets-manager-python-sdk

./: .bumpversion.cfg  .gitignore  .releaserc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  package-lock.json  package.json  prepare_project.sh  pylint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/: release.yaml
.github/workflows/: ci.yml  codeql-analysis.yml  create-release-and-publish.yml  create-release.yaml  create-release.yml  publish-release.yaml  publish-release.yml  publish.yaml  publish.yml  run-tests.yml
examples/: test_secrets_manager_v2_examples.py
ibm_secrets_manager_sdk/: __init__.py  common.py  ibm_cloud_secrets_manager_api_v1.py  secrets_manager_v1.py  secrets_manager_v2.py  version.py
test/integration/: __init__.py  test_integration_ibm_cloud_secrets_manager_api_v1.py  test_integration_secrets_manager_v1.py  test_manual_secrets_manager_v2.py  test_secrets_manager_v2.py
test/unit/: test_common.py  test_ibm_cloud_secrets_manager_api_v1.py  test_secrets_manager_v1.py  test_secrets_manager_v2.py
