[project]
name = "ibm-secrets-manager-sdk"
version = "2.1.19"
authors = [
    { name="IBM" }
]
description = "IBM Cloud Secrets Manager Python SDK"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
keywords = ["ibm", "cloud", "secrets manager", "ibm cloud services"]
dependencies = [
    "requests>=2.32.4,<3.0.0",
    "urllib3>=2.6.3,<3.0.0",
    "python-dateutil>=2.5.3,<3.0.0",
    "ibm-cloud-sdk-core>=3.24.4,<4.0.0",
]

[project.urls]
Repository = "https://github.com/IBM/secrets-manager-python-sdk"
Documentation = "https://cloud.ibm.com/apidocs/secrets-manager"
Issues = "https://github.com/IBM/secrets-manager-python-sdk/issues"

[project.optional-dependencies]
dev = [
    "coverage>=7.3.2,<8.0.0",
    "pylint>=4.0.5,<4.1.0",
    "pytest>=9.0.2,<9.1.0",
    "pytest-cov>=7.0.0,<7.1.0",
    "pytest-rerunfailures>=3.1",
    "responses>=0.23.3,<1.0.0",
    "black>=26.3.1,<26.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["ibm_secrets_manager_sdk"]

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.bumpversion]
current_version = "2.1.19"
commit = true
message = "Update version {current_version} -> {new_version}"

[[tool.bumpversion.files]]
filename = "ibm_secrets_manager_sdk/version.py"
search = "__version__ = '{current_version}'"
replace = "__version__ = '{new_version}'"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""
